# tickets-de-qualitad

./: .gitignore  CONTRIBUTING.md  README.md  retour de correction.js
docs/: architecture.md  developer-charter.md
src/: CMakeLists.txt
ticket_system/: index.html  package-lock.json  package.json  tsconfig.app.json
ticket_system/src/: App.tsx
ticket_system/src/components/Navbar/: index.tsx
ticket_system/src/components/TicketCard/: index.tsx
ticket_system/src/database/: tickets.json
ticket_system/src/hooks/: useAuth.tsx
ticket_system/src/models/: Ticket.ts  User.ts
ticket_system/src/pages/: CreateTicket.tsx  Dashboard.tsx  Login.tsx  TicketDetail.tsx  TicketList.tsx
ticket_system/src/services/: ticketService.ts
ticket_system/src/styles/: global.css
ticket_system/src/tests/: CreateTicket.test.tsx  Dashboard.test.tsx  Login.test.tsx  TicketCard.test.tsx  TicketDetail.test.tsx  TicketList.test.tsx  ticketService.test.ts  useAuth.test.tsx
